@@ -1,3 +1,11 @@
+2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* data/epiphany.m4:
+
+	Rename the autoconf macro to EPIPHANY_EXTENSION_INIT() and make it
+	check the ephy version, get the extension directory and find out
+	whether python is enabled.
+
 2005-09-24  Jean-François Rameau  <jframeau@cvs.gnome.org>
 
 	* embed/mozilla/EphyAboutModule.cpp: (GetErrorMessage):
